--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,46 @@
 body{
-    background-color: rgb(105, 163, 173)
+    background-color: rgb(125, 183, 193)
 }
 h1{
     text-align: center;
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 75px;
-    color: rgba(15, 55, 73, 0.897);
-    margin-top: 70px; 
+	font-family: 'Titillium Web', sans-serif;
+    font-size: 40px;
+    background-color: rgba(15, 55, 73, 0.4);
+    color: #bfdfdf;
+	letter-spacing: 6px;
+	margin-bottom: 40px;
+	padding: 10px 30px;
 }
 h3{
-    text-align: center;
+	width: 390px;
+	margin: 12px auto;
+    text-align: right;
     font-family: 'Titillium Web', sans-serif;
-    font-size: 42px;
-    color: rgba(241, 222, 180, 0.726);
-    margin-top: 70px; 
+    font-size: 23px;
+    color: #dfffff;
 }
 h3 a{
     text-decoration: none;
-    color: rgba(224, 223, 219, 0.767);
+	padding:0px 8px;
     color: rgba(15, 55, 73, 0.897)
 }
 .corpo{
-    width: 400px;
+    width: 396px;
     height: 520px;
-    margin: 60px auto;
-    border: 2px solid black;
-    border-radius: 8px;
+    margin: 0px auto;
+    border: 1px solid #333333;
+    border-radius: 4px;
     box-sizing: border-box;
-    background-color: rgba(105, 107, 106, 0.637);
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.75);
+    background-color: rgba(105, 107, 106, 0.7);
 }
 /* .tela*/ .tela1 , .tela2{ 
-    background-color: rgba(35, 37, 37, 0.877);
-    border-radius: 9px;
+    background-color: rgba(35, 37, 37, 0.6);
+    border-radius: 6px;
     margin: 8px auto;
     margin-left: 8px; 
     box-sizing: border-box;
     color: rgba(255, 255, 255, 0.925);
-    text-align: right; 
+    text-align: right;
 }
 .tela1{
     width: 380px;
@@ -45,7 +48,6 @@ h3 a{
     margin-top: 0;
     font-size: 50px;
     padding: 10px;
-    padding: 0;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
 }
@@ -59,22 +61,21 @@ h3 a{
     border-bottom-left-radius: 0px;
 }
 .blocoBotoes{
-    margin-left: 2px;
+    margin-left: 6px;
     width: 100%;
     height: 78.9%;
-    border-radius: 9px;
-    background-color: transparent;
 }
 
 .botao{
     height: 70px;
-    width: 95px;
+    width: 92px;
     margin-top: 3px;
     font-size: 25px;
     font-weight: 400;
     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
     background: #63B8EE;
-    border: 0;
+	border-radius:3px;
+	color: #222222;
 }
 
 .botao:hover {
@@ -85,7 +86,7 @@ h3 a{
     background: -moz-linear-gradient(top,  #468CCF,  #63B8EE);
 }
 .blocoBotoes > .c{
-    background-color: rgba(245, 180, 59, 0.87)!important;
+    background-color: rgba(245, 180, 59, 0.97)!important;
 }
 .blocoBotoes > .c:hover{
     background: rgb(207, 152, 70);
@@ -95,6 +96,6 @@ h3 a{
     background: -moz-linear-gradient(top,  rgb(207, 175, 70),  rgb(238, 212, 99));
 }
 #zero{
-    width: 194px;
+    width: 188px;
 }
 
